--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:AnvNISbl1PlfsnZ910UbHX6Cz5eau4MWtbXtXvfPcOw=
 APP_DEBUG=true
-APP_URL=http://new-lara.test
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
