mengubah file env

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:AnvNISbl1PlfsnZ910UbHX6Cz5eau4MWtbXtXvfPcOw=
+APP_KEY=base64:DeJ8/xKDVAWVfzCa6oMqPVffDJQRClqwygm+Kq2ifgA=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://new-lara.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
