--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=MSM_Blogs
 APP_ENV=local
 APP_KEY=base64:DeJ8/xKDVAWVfzCa6oMqPVffDJQRClqwygm+Kq2ifgA=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=new_lara
+DB_DATABASE=msm_blog
 DB_USERNAME=root
 DB_PASSWORD=
 
