menambahkan/mengubah data 16:23 24feb223
+env
  -menambahkan FAKER_LOCAL=id_ID
+controllers
  -mengubah post controller method index
+models
  -mengubah post model
+config
  -mengubah config app.php buat faker
+facotries
  -mengubah user facotory
  -menambahkan post facotory
+migrations
  -mengubah user migration
+seeder
  -mengubah database seeder
+routes
  -mengubah file web.php menambahkan route baru
+views
  -mengubah file post dan posts

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=MSM_Blogs
 APP_ENV=local
 APP_KEY=base64:DeJ8/xKDVAWVfzCa6oMqPVffDJQRClqwygm+Kq2ifgA=
 APP_DEBUG=true
-APP_URL=http://new-lara.test
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -50,3 +50,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKER_LOCALE=id_ID
